--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,9 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,CONNECTIONS_FROM_HOST:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://broker:9092,CONNECTIONS_FROM_HOST://localhost:19092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_METRIC_REPORTERS: io.confluent.metrics.reporter.ConfluentMetricsReporter
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
@@ -58,15 +59,15 @@ services:
       - broker
       - schema-registry
     environment:
-      KAFKA_URL: "broker:9092"
+      KAFKA_URL: "broker:29092"
       KAFKA_TOPIC: "dev.orders"
       SCHEMA_REGISTRY_URL: "schema-registry:8081"
       INGESTION_DATA_PATH: "/ingestion_data"
       AVRO_SCHEMA_FILE: "/ingestion/orders.avsc"
-      KAFKA_BOOTSTRAP_SERVERS: "broker:9092"
+      KAFKA_BOOTSTRAP_SERVERS: "broker:29092"
     volumes:
       - .:/ingestion
-      - ./ingestion_data:/ingestion_data:z
+      - ./ingestion_data:/ingestion_data
     command:
       - /bin/bash
       - -c
